# agent-swarm

./: .git-blame-ignore-revs  .gitattributes  .gitignore  :memory:  CHANGELOG.md  DESIGN.md  PDCA.md  README.md  RELEASE.md  W33_PLAN.md  W35_PLAN.md  W36_PLAN.md  W36_RETRO_PLAN.md  W36b_PLAN.md  W36c_PLAN.md  W36d_PLAN.md  W36e_PLAN.md  W36f_PLAN.md  W36g_PLAN.md  W37_PLAN.md  W38_PLAN.md  W39_PLAN.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
demos/: README.md
docs/: MEMORY.md  MULTI-TENANT-REPORT.md  P5-RETRO.md  PHASE3-PLAN-2026-06-20.md  PHASE3-RETRO.md  PHASE4-RETRO.md  PHASE5-PLAN.md  PHASE6-PLAN.md  RELEASE-0.3.0.md  REVIEW-2026-06-19-2-closure.md  REVIEW-2026-06-19-2.md  REVIEW-2026-06-19-v2.md  REVIEW-2026-06-19.md  RISK-LOG.md  SANDBOX-BENCH.md  STORAGE-BENCH.md  WORKTREE-BENCH.md  concepts.md  troubleshooting.md
docs/grafana/: dashboard.json
docs/recipes/: README.md
examples/: w10_lark.yaml  w11_approval_cards.py  w12_websocket_realtime.py  w12_websocket_realtime.yaml  w14a_mcp_resilience.yaml  w16_multi_tenant.yaml  w17_cross_channel.yaml  w18_redis_backend.yaml  w19_docker_sandbox.yaml  w1_hello.yaml  w20_vault.yaml  w22_mcp_worktree.yaml  w28_web_demo.yaml  w2_two_agents.yaml  w31_web_with_swarm.yaml  w32_web_with_worktree.yaml  w36a_jwt_rotation.yaml  w3_resume.yaml  w5_secure.yaml  w6_tui.yaml  w7_delegate.yaml  w8_adversarial.yaml  w9_mcp_github_filesystem.yaml
src/agent_swarm/: __init__.py  golden.py
tests/: conftest.py
tests/e2e/: test_w10_approval_e2e.py  test_w10_lark_e2e.py  test_w11_approval_e2e.py  test_w12_websocket_e2e.py  (+11 more)
tools/: agent_review.py  audit_create_task.py  bench_multi_tenant.py  bench_sandbox.py  bench_storage.py  bench_worktree.py  benchmark.py  check_sql_lint.py  count_reconnect.py  multi_worker_smoke.py  no_bare_create_task.py  verify_p1_dod.py  verify_p2_dod.py  verify_p3_dod.py  verify_p4_dod.py  verify_p5_dod.py  verify_w10_dod.py  verify_w11_dod.py  verify_w12_dod.py  verify_w13_dod.py  verify_w33_dod.py  verify_w34_dod.py  verify_w35_dod.py  verify_w36a_dod.py  verify_w36b_dod.py  verify_w36c_dod.py  verify_w36d_dod.py  verify_w36e_dod.py  verify_w36f_dod.py  verify_w36g_dod.py  verify_w37_dod.py  verify_w38_dod.py  verify_w39_dod.py  verify_w40_dod.py  verify_w41_dod.py  verify_w42_dod.py  verify_w43_dod.py  verify_w7_dod.py  verify_w8_dod.py  verify_w9_dod.py
(+212 files in other folders)
